--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd-style": "^3.7.1",
     "dayjs": "^1.11.18",
     "markdown-it": "^14.1.0",
+    "@supabase/supabase-js": "^2.48.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
